--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ option(USE_X11 "Enables X11 Support" ON)
 option(USE_WAYLAND "Enables Wayland Support" OFF)
 option(USE_GLES "Enables GLES2 And EGL, disables OGL" OFF)
 option(USE_GLES3 "Enables GLES3 and EGL" OFF)
-option(USE_UPNP "Enables UPnP port mapping support" ON)
 option(DISABLE_WX "Disable wxWidgets (use CLI interface)" OFF)
 
 option(FASTLOG "Enable all logs" OFF)
@@ -286,7 +285,6 @@ if(ANDROID)
 	add_definitions(-DANDROID)
 	set(USE_X11 0)
 	set(USE_WAYLAND 0)
-	set(USE_UPNP 0)
 	set(USE_GLES3 1)
 endif()
 
@@ -510,6 +508,8 @@ include_directories(Source/Core/VideoUICommon/Src)
 #
 add_subdirectory(Externals/Bochs_disasm)
 include_directories(Externals/Bochs_disasm)
+include_directories(Externals)
+add_subdirectory(Externals/enet)
 
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" AND NOT ANDROID)
 	check_lib(LZO lzo2 lzo/lzo1x.h QUIET)
@@ -586,21 +586,6 @@ else()
 	message("Using static SFML ${SFML_FIND_VERSION_MAJOR}.${SFML_FIND_VERSION_MINOR} from Externals")
 	add_subdirectory(Externals/SFML)
 	include_directories(Externals/SFML/include)
-endif()
-
-if(USE_UPNP)
-	if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" AND NOT ANDROID)
-		include(FindMiniupnpc)
-	endif()
-	if(MINIUPNP_FOUND AND MINIUPNPC_VERSION_1_7_OR_HIGHER)
-		message("Using shared miniupnpc")
-		include_directories(${MINIUPNP_INCLUDE_DIR})
-	else()
-		message("Using static miniupnpc from Externals")
-		add_subdirectory(Externals/miniupnpc)
-		include_directories(Externals/miniupnpc/src)
-	endif()
-	add_definitions(-DUSE_UPNP)
 endif()
 
 if(NOT ${CMAKE_SYSTEM_NAME} MATCHES "Darwin" AND NOT ANDROID)
