--- a/Source/Core/Common/Common.vcxproj
+++ b/Source/Core/Common/Common.vcxproj
@@ -114,7 +114,7 @@
     </Link>
     <Lib />
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include;..\..\..\Externals</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,7 +124,7 @@
     </Link>
     <Lib />
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include;..\..\..\Externals</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,7 +136,7 @@
     </Link>
     <Lib />
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include;..\..\..\Externals</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugFast|Win32'">
@@ -148,7 +148,7 @@
     </Link>
     <Lib />
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include;..\..\..\Externals</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -160,7 +160,7 @@
     </Link>
     <Lib />
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include;..\..\..\Externals</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='DebugFast|x64'">
@@ -172,7 +172,7 @@
     </Link>
     <Lib />
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\Externals\polarssl\include;..\..\..\Externals</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
