[vc12] Dynamically link XAudio2. Unfortunately this requires partitioning API usage into separate compilation units. Will need to make it more user-friendly (ie only expose one XAudio2 choice and auto-pick behind the scenes).

--- a/Source/Core/AudioCommon/AudioCommon.vcxproj
+++ b/Source/Core/AudioCommon/AudioCommon.vcxproj
@@ -112,6 +112,12 @@
     </ClCompile>
     <ClCompile Include="Src\WaveFile.cpp" />
     <ClCompile Include="Src\XAudio2Stream.cpp" />
+    <ClCompile Include="Src\XAudio2_7Stream.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(DXSDK_DIR)Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(DXSDK_DIR)Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(DXSDK_DIR)Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(DXSDK_DIR)Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\aldlist.h" />
@@ -126,6 +132,7 @@
     <ClInclude Include="Src\stdafx.h" />
     <ClInclude Include="Src\WaveFile.h" />
     <ClInclude Include="Src\XAudio2Stream.h" />
+    <ClInclude Include="Src\XAudio2_7Stream.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
