--- a/Source/Core/AudioCommon/AudioCommon.vcxproj.filters
+++ b/Source/Core/AudioCommon/AudioCommon.vcxproj.filters
@@ -27,6 +27,9 @@
       <Filter>SoundStreams</Filter>
     </ClCompile>
     <ClCompile Include="Src\stdafx.cpp" />
+    <ClCompile Include="Src\XAudio2_7Stream.cpp">
+      <Filter>SoundStreams</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\aldlist.h" />
@@ -51,6 +54,9 @@
       <Filter>SoundStreams</Filter>
     </ClInclude>
     <ClInclude Include="Src\stdafx.h" />
+    <ClInclude Include="Src\XAudio2_7Stream.h">
+      <Filter>SoundStreams</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
