--- a/Source/Core/AudioCommon/AudioCommon.vcxproj
+++ b/Source/Core/AudioCommon/AudioCommon.vcxproj
@@ -97,7 +97,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Src\aldlist.cpp" />
-    <ClCompile Include="Src\AOSoundStream.cpp" />
     <ClCompile Include="Src\AudioCommon.cpp" />
     <ClCompile Include="Src\DPL2Decoder.cpp" />
     <ClCompile Include="Src\DSoundStream.cpp" />
@@ -121,13 +120,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\aldlist.h" />
+    <ClInclude Include="Src\AlsaSoundStream.h" />
     <ClInclude Include="Src\AOSoundStream.h" />
     <ClInclude Include="Src\AudioCommon.h" />
+    <ClInclude Include="Src\CoreAudioSoundStream.h" />
     <ClInclude Include="Src\DPL2Decoder.h" />
     <ClInclude Include="Src\DSoundStream.h" />
     <ClInclude Include="Src\Mixer.h" />
     <ClInclude Include="Src\NullSoundStream.h" />
     <ClInclude Include="Src\OpenALStream.h" />
+    <ClInclude Include="Src\OpenSLESStream.h" />
+    <ClInclude Include="Src\PulseAudioStream.h" />
     <ClInclude Include="Src\SoundStream.h" />
     <ClInclude Include="Src\stdafx.h" />
     <ClInclude Include="Src\WaveFile.h" />
