[vc12] build glew instead of having binary .lib in the repo. fixup polarssl project so it can be used with normal project reference.

--- a/Externals/polarssl/visualc/PolarSSL.vcxproj
+++ b/Externals/polarssl/visualc/PolarSSL.vcxproj
@@ -70,9 +70,7 @@
     <Import Project="..\..\..\Source\VSProps\CodeGen_Release.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(ProjectDir)$(Platform)\$(Configuration)\</OutDir>
-  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <AdditionalIncludeDirectories>../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
