--- a/Externals/libusbx/msvc/libusb_static_2012.vcxproj
+++ b/Externals/libusbx/msvc/libusb_static_2012.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectName>libusb-1.0 (static)</ProjectName>
+    <ProjectName>libusb-1.0</ProjectName>
     <ProjectGuid>{349EE8F9-7D25-4909-AAF5-FF3FADE72187}</ProjectGuid>
     <RootNamespace>libusb</RootNamespace>
   </PropertyGroup>
